# mb_grep

./: .clang-format  CMakeLists.txt  Makefile  README.md  main.cpp  matcher.cpp  matcher.h  thread_pool.cpp  thread_pool.h  utils.cpp  utils.h
scripts/: build.sh  clean.sh  env.sh
